[tool.poetry]
name = "repl_python3_Ghost"
version = "0.1.0"
description = ""
authors = ["RSGameTech <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube_dl = "^2021.6.6"
discord = "^1.7.3"
jishaku = "^2.3.0"
discoutils = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
